AC_INIT(configure.in)

AM_INIT_AUTOMAKE(PHPythia, 0.1)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

ROOTLIBS=`root-config --libs`
AC_SUBST(ROOTLIBS)

AC_CONFIG_MACRO_DIR([m4])

dnl PYTHIALIB='-L$(HOME)/lib -lPythia6 -lEG -lEGPythia6'
dnl AC_SUBST(PYTHIALIB)

dnl   no point in suppressing warnings people should 
dnl   at least see them, so here we go for g++: -Wall
if test $ac_cv_prog_gxx = yes; then
   CXXFLAGS="$CXXFLAGS -Wall -Werror"
fi

AC_OUTPUT(Makefile)
